--- a/src/index.css
+++ b/src/index.css
@@ -461,8 +461,8 @@ template {
 @font-face {
     font-family: "FK Grotesk Neue";
     src:
-        url("./static/fonts/FKGroteskNeue-Regular.woff2") format("woff2"),
-        url("./static/fonts/FKGroteskNeue-Regular.woff") format("woff");
+        url("../static/fonts/FKGroteskNeue-Regular.woff2") format("woff2"),
+        url("../static/fonts/FKGroteskNeue-Regular.woff") format("woff");
     font-weight: 100 400;
     font-style: normal;
 }
@@ -470,8 +470,8 @@ template {
 @font-face {
     font-family: "FK Grotesk Neue";
     src:
-        url("./static/fonts/FKGroteskNeue-Medium.woff2") format("woff2"),
-        url("./static/fonts/FKGroteskNeu-Medium.woff") format("woff");
+        url("../static/fonts/FKGroteskNeue-Medium.woff2") format("woff2"),
+        url("../static/fonts/FKGroteskNeu-Medium.woff") format("woff");
 
     font-weight: 500 600;
     font-style: normal;
@@ -480,7 +480,7 @@ template {
 @font-face {
     font-family: "FK Grotesk Neue";
     src:
-        url("./static/fonts/FKGroteskNeue-Bold.woff2") format("woff2"),
+        url("../static/fonts/FKGroteskNeue-Bold.woff2") format("woff2"),
         url("../static/fonts/FKGroteskNeue-Bold.woff") format("woff");
     font-weight: 700 800;
     font-style: normal;
