--- a/src/index.css
+++ b/src/index.css
@@ -68,7 +68,7 @@ hr {
 
 pre {
     font-family:
-        FK Grotesk Neue,
+        FK Grotesk Neu,
         monospace,
         monospace;
     /* 1 */
@@ -119,7 +119,7 @@ code,
 kbd,
 samp {
     font-family:
-        FK Grotesk Neue,
+        FK Grotesk Neu,
         monospace,
         monospace;
     /* 1 */
@@ -459,7 +459,7 @@ template {
  * Custom CSS
  */
 @font-face {
-    font-family: "FK Grotesk Neue";
+    font-family: "FK Grotesk Neu";
     src:
         url("../static/fonts/FKGroteskNeue-Regular.woff2") format("woff2"),
         url("../static/fonts/FKGroteskNeue-Regular.woff") format("woff");
@@ -468,7 +468,7 @@ template {
 }
 
 @font-face {
-    font-family: "FK Grotesk Neue";
+    font-family: "FK Grotesk Neu";
     src:
         url("../static/fonts/FKGroteskNeue-Medium.woff2") format("woff2"),
         url("../static/fonts/FKGroteskNeu-Medium.woff") format("woff");
@@ -478,7 +478,7 @@ template {
 }
 
 @font-face {
-    font-family: "FK Grotesk Neue";
+    font-family: "FK Grotesk Neu";
     src:
         url("../static/fonts/FKGroteskNeue-Bold.woff2") format("woff2"),
         url("../static/fonts/FKGroteskNeue-Bold.woff") format("woff");
@@ -491,14 +491,14 @@ span,
 p,
 label,
 div {
-    font-family: "FK Grotesk Neue";
+    font-family: "FK Grotesk Neu";
 }
 
 button,
 a,
 a:before,
 a:after {
-    font-family: "FK Grotesk Neue";
+    font-family: "FK Grotesk Neu";
     border: 0;
     outline: 0;
 
@@ -509,7 +509,7 @@ a:after {
 }
 
 h1 {
-    font-family: "FK Grotesk Neue";
+    font-family: "FK Grotesk Neu";
     font-weight: 700;
     line-height: 1.25em;
     color: #fff;
@@ -524,7 +524,7 @@ h3,
 h4,
 h5,
 h6 {
-    font-family: "FK Grotesk Neue";
+    font-family: "FK Grotesk Neu";
     font-weight: 500;
     font-size: 32px;
     line-height: 1.25em;
